<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.renukamatkar.pinterest.Create_a_Board"
    android:background="@android:color/holo_blue_light">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/CreateABoardBulb"
        android:ems="10"
        android:id="@+id/CreateABoardName"
        android:hint="Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MapButton"
        android:src="@drawable/map"
        android:contentDescription="MapButtonBulb"
        android:layout_below="@+id/CreateABoardName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MapTextBulb"
        android:id="@+id/MapText"
        android:layout_alignBottom="@+id/MapButton"
        android:layout_toEndOf="@+id/MapButton"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateButtonBulb"
        android:id="@+id/CreateButton"
        android:background="#ff0f14"
        android:textColor="#ffffff"
        android:textSize="@dimen/abc_action_bar_content_inset_material"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/MapButton" />

</RelativeLayout>
