<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="500dp"
    android:layout_height="500dp" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.renukamatkar.pinterest.Create_Board"
    android:background="@android:color/holo_purple">

    <Gallery
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <ViewStub
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewStub"
        android:layout_below="@+id/gallery"
        android:layout_toEndOf="@+id/gallery"
        android:layout_marginStart="38dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/CreateBoardPic"
        android:src="@drawable/create_board2"
        android:layout_alignStart="@+id/viewStub"
        android:contentDescription="CreateBoardImage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PinFromBulb"
        android:id="@+id/PinFromText"
        android:textAlignment="textStart"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/CreateBoardPic"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/GalleryImage"
        android:layout_marginTop="46dp"
        android:src="@drawable/gallery"
        android:layout_below="@+id/PinFromText"
        android:layout_toEndOf="@+id/gallery"
        android:contentDescription="GalleryBulb" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateBoardBulb"
        android:onClick="cb"
        android:id="@+id/CreateBoardButton"
        android:layout_marginStart="48dp"
        android:layout_below="@+id/gallery"
        android:layout_toEndOf="@+id/CreateBoardPic"
        android:layout_marginTop="27dp"
        android:textColor="#0a0a0a"
        android:background="#68e6ff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GalleryButtonBulb"
        android:id="@+id/GalleryButtonText"
        android:layout_alignTop="@+id/GalleryImage"
        android:layout_alignStart="@+id/CreateBoardButton"
        android:layout_marginTop="28dp"
        android:background="#5fdcff"
        android:textColor="#060606" />

</RelativeLayout>
