<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Home_page"
    android:background="#ffbb85">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PinterestHomeText"
        android:id="@+id/PinterestHomeMessage"
        android:textSize="55dp"
        android:textColor="#ff0000"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/FacebookHomeText"
        android:id="@+id/FacebookHomeButton"
        android:layout_below="@+id/PinterestHomeMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:background="#6508ff"
        android:textColor="#ffffffff"
        android:textSize="20sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/GoogleHomeText"
        android:id="@+id/GoogleHomeButton"
        android:layout_below="@+id/FacebookHomeButton"
        android:layout_marginTop="29dp"
        android:textColor="#ffffffff"
        android:background="#ff171f"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Signup"
        android:id="@+id/EmailHomeButton"
        android:layout_marginTop="35dp"
        android:textColor="#000000"
        android:layout_below="@+id/GoogleHomeButton"
        android:layout_alignParentStart="false"
        android:textSize="20dp"
        android:layout_alignEnd="@+id/GoogleHomeButton"
        android:onClick="signup" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:onClick="loginclick"
        android:id="@+id/LoginHomeButton"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/PinterestHomeMessage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="have an account?"
        android:id="@+id/HomeText1"
        android:layout_marginEnd="25dp"
        android:layout_alignBaseline="@+id/LoginHomeButton"
        android:layout_alignBottom="@+id/LoginHomeButton"
        android:layout_toStartOf="@+id/LoginHomeButton" />

</RelativeLayout>
